# chorus

./: .gitignore  CLAUDE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  MIGRATION_COMPLETE.md  PLAN.md  PROTOTYPE_RESULTS.md  README.md  TODO.md  chorus.toml  config.py  database.py  main.py  migration_plan.md  models.py  prototype_json_mode.py  pyproject.toml  requirements.txt  test_permission_retry.py  test_permission_retry.sh
.claude-test/: transcript.json
.github/workflows/: ci.yml
api/: __init__.py  dashboard.py  events.py  hooks.py  tasks.py
docs/: INTERACTIVE_PERMISSIONS.md  JSON_EVENTS.md  PERMISSION_HANDLING.md  PERMISSION_HOOKS.md  README.md  STATUS_TRACKING.md  TERMINATION_HANDLING.md
services/: __init__.py  claude_config.py  context.py  error_handler.py  gitbutler.py  hooks.py  json_monitor.py  json_parser.py  logging_utils.py  notifier.py  status_detector.py  status_poller.py  tmux.py  ttyd.py
static/: app.js  style.css  theme.js
templates/: base.html  dashboard.html
templates/partials/: task_detail.html  task_item.html  task_list.html
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_context.py  test_database.py  test_error_handler.py  test_gitbutler.py  test_hooks.py  test_hooks_api.py  test_json_monitor.py  test_json_parser.py  test_models.py  test_notifier.py  test_services.py  test_status_detector.py  test_status_integration.py  test_status_poller.py  test_tasks_api.py  test_tmux.py  test_ttyd.py
